<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/web_hi_res_512"
        android:title="Search"
        app:showAsAction="always"/>

</menu>